2013-05-15  Rene Liebscher <R.Liebscher@gmx.de>

	* configure.ac: if both found libftdi and libftdi1 use only libftdi1
	* avrdude.conf.in: fixed buff pins of avrftdi programmers (low
	active buffer need now inverted numbers)
	* avrftdi*.*: accept also old libftdi (0.20 still works with it),
	added powerup to initialize
	* ft245r.c: accept libftdi1, code cleanup and make it more similar
	to avrfdti (os they might be merged someday)

2013-05-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac (AC_INIT): Bump version to 6.0rc1.

2013-05-07  Hannes Weisbach <hannes_weisbach@gmx.net>

	* avrftdi_private.h: Change size of pin_checklist to N_PINS (from N_PINS-1)
	* avrftdi.c: Adapt code to new size of pin_checklist. Remove pins_check()
	from set_pin().
	Add pgm->power[up|down] functions as well as fill pgm->enable|disable with
	proper content as suggested by Rene Liebscher.

2013-05-05  Rene Liebscher <R.Liebscher@gmx.de>

	* pindefs.h: use unsigned int if stdint.h is not available and UINT_MAX is 0xffffffff
	otherwise use unsinged long
	* ft245r.c: added support for more pin functions led, vcc, buff

2013-05-06  Hannes Weisbach <hannes_weisbach@gmx.net>

	* avrftdi_tpi.c: instead of private set_pin() function pointer use the one
	declared in struct PROGRAMMER.
	* avrftdi_private.h: remove set_pin function pointer. Add pin_checklist_t
	member to check pgm->setpin calls during runtime.
	* avrftdi.c: remove set_pin function pointer init, add pgm->setpin init.
	Convert avrftdi to new 0-based pindefs infrastructure.
	* avrdude.conf.in: Change all avrftdi-based programmers' pin definitions to
	0-based.

2013-05-06  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* pindefs.h: Include "ac_cfg.h" before testing for HAVE_* macros.

2013-05-05  Rene Liebscher <R.Liebscher@gmx.de>

	* main.c: revert to rev 1159 (doing pgm_display after pgm_open)
	* avrpart.[ch]: moved avr_pin_name to pindefs.[ch]
	* pgm.c: moved pins_to_str to pindefs.[ch], added initialization of 